--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,11 @@
 # https://www.playframework.com/documentation/latest/Configuration
 
 play.filters.headers.contentSecurityPolicy=null
+
+# Default database configuration
+slick.dbs.default.driver="slick.driver.MySQLDriver$"
+slick.dbs.default.db.driver=com.mysql.cj.jdbc.Driver
+slick.dbs.default.db.url="jdbc:mysql://localhost/fourwords?serverTimezone=UTC"
+slick.dbs.default.db.user="root"
+slick.dbs.default.db.password=""
+slick.dbs.default.db.logSql=true
